Add more recipes

--- a/recipes/Lasagna/lasagna.html
+++ b/recipes/Lasagna/lasagna.html
@@ -5,9 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <h1>Lasagna</h1>
-    <img src="./lasagna.jpg" alt="Lasagna" width="175"> Homemade Lasagna
+    <img src="./lasagna.jpg" alt="Lasagna" width="400"> 
+    <h2>Description</h2>
+    <p>Homemade Lasagna</p>
 
-    <h2>Ingredients</h2>
+    
+</head>
+<body>
+    <h3>Ingredients</h3>
     <ul>
         <li>Meat</li>
         <li>Onions</li>
@@ -27,9 +32,6 @@
         <li>Make the cheese layer</li>
         <li>Assemble the lasagna</li>
         <li>Bake the lasagna</li>
-    </ol>
-</head>
-<body>
-    
+    </ol>    
 </body>
 </html>
