--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="recipes/Lasagna/lasagna.html">Lasagna</a></li>
-        <li><a href="recipes/Chicken Fried Steak/Chicken Fried Steak.html">Chicken Fried Steak</a></li>
+        <li><a href="./recipes/Lasagna/lasagna.html">Lasagna</a></li>
+        <li><a href="./recipes/Chicken Fried Steak/Chicken Fried Steak.html">Chicken Fried Steak</a></li>
     </ul>
 </body>
 </html>
